# chatbot

./: .env-example  LICENSE  Makefile  README.md  main.py  pyproject.toml
chatbot/routes/: __init__.py  index.py
chatbot/services/: base.py  groq.py  rag.py  vector_store.py
context/: build_context.sh
